crates/java-syntax/tests/snapshots/incremental_snapshots__kind_root_fallback.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
package a.b.c; class A {}

EDIT:
  range: 0..14
  text: "package x.y.z;"

RESULT_SOURCE:
package x.y.z; class A {}

TREE:
ROOT@0..25
  PACKAGE_DECL@0..14
    PACKAGE_KW@0..7 "package"
    QUALIFIED_NAME@7..13
      WHITESPACE@7..8 " "
      IDENTIFIER@8..9 "x"
      DOT@9..10 "."
      IDENTIFIER@10..11 "y"
      DOT@11..12 "."
      IDENTIFIER@12..13 "z"
    SEMICOLON@13..14 ";"
  CLASS_DECL@14..25
    WHITESPACE@14..15 " "
    CLASS_KW@15..20 "class"
    WHITESPACE@20..21 " "
    IDENTIFIER@21..22 "A"
    CLASS_BODY@22..25
      WHITESPACE@22..23 " "
      L_BRACE@23..24 "{"
      R_BRACE@24..25 "}"
