crates/java-syntax/tests/snapshots/incremental_snapshots__replace_method_name.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
class A { void oldName() {} }

EDIT:
  range: 15..22
  text: "newName"

RESULT_SOURCE:
class A { void newName() {} }

TREE:
ROOT@0..29
  CLASS_DECL@0..29
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..29
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      METHOD_DECL@9..27
        WHITESPACE@9..10 " "
        VOID_KW@10..14 "void"
        WHITESPACE@14..15 " "
        IDENTIFIER@15..22 "newName"
        FORMAL_PARAMETERS@22..24
          L_PAREN@22..23 "("
          R_PAREN@23..24 ")"
        BLOCK@24..27
          WHITESPACE@24..25 " "
          L_BRACE@25..26 "{"
          R_BRACE@26..27 "}"
      WHITESPACE@27..28 " "
      R_BRACE@28..29 "}"
