crates/java-syntax/tests/snapshots/incremental_snapshots__test_utf8_offset.snap
---
source: crates/java-syntax/tests/incremental_snapshots.rs
expression: out
---
SOURCE:
class A { /* 好  */  }

EDIT:
  range: 17..21
  text: "int x = 1;"

RESULT_SOURCE:
class A { /* 好 int x = 1; }

TREE:
ROOT@0..29
  CLASS_DECL@0..29
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..29
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      MISSING@9..29
        WHITESPACE@9..10 " "
        BLOCK_COMMENT@10..29 "/* 好 int x = 1; }"
